gccida/g2/split_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56623:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56626:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56627:42: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( *( _DWORD *)v4.rtwint != 1 || x0[1] != 13 ) 
                                   ~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56635:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56638:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1178( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56646:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56649:31: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return ( rtx)gen_split_1179( &recog_data_0); 
                              ^~~~~~~~~~~~
                              recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56656:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56675:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v40; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56681:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v184; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56689:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v186; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56701:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v188; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56709:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = v190; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56711:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_938( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56734:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v170; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56737:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = *( rtx *)( v44 + 16); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56750:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( *( rtx *)( v446 + 8), recog_data_0.operand[1]) ) 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56768:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v453; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/insn-recog.c:56779:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[1]->fld[0].rtint != 2 ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_insns/src/obj/insn-recog.o] Error 1
